--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/parkplus?createTableIfNotExists=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/parkplus?createTableIfNotExists=true
+#spring.datasource.username=root
+#spring.datasource.password=Kan@2911
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_parkinglot_db
 spring.datasource.username=root
-spring.datasource.password=Kan@2911
+spring.datasource.password=Skc@1999
 spring.jpa.hibernate.ddl-auto=update
